--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://hanmadaiki.github.io/mesto-react/",
-  "name": "mesto-react",
+  "homepage": "https://hanmadaiki.github.io/react-mesto-auth/",
+  "name": "react-mesto-auth",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
